--- a/src/components/Courses/c/Index.css
+++ b/src/components/Courses/c/Index.css
@@ -46,7 +46,9 @@
   
   iframe {
     width: 100%;
-    height: 25rem;
+    height:25rem;
+    /* position: relative; */
+    /* padding-bottom: 56.25%; 16:9 aspect ratio (9 / 16 * 100%) */
   }
   .title{
     font-weight: bold;
