--- a/src/components/Courses/c/Index.css
+++ b/src/components/Courses/c/Index.css
@@ -28,7 +28,7 @@
     cursor: pointer;
     margin: 5px 0;
     padding: 5px;
-    background-color:;
+    /* background-color:; */
     border-radius: 5px;
     display: flex;
     flex-direction: row; /* Display playlist items as flex containers */
