--- a/src/components/Courses/dbms/Index.css
+++ b/src/components/Courses/dbms/Index.css
@@ -18,7 +18,12 @@
     background-color:rgb(223, 220, 250);
     border-radius: 10px;  
 }
-  
+.playlist::-webkit-scrollbar-track{
+  background-color: transparent;
+}
+.playlist::-webkit-scrollbar-thumb{
+  background-color: transparent;
+}
   .playlist ul {
     list-style-type: none;
     padding: 0;
