--- a/src/components/Courses/c/Index.css
+++ b/src/components/Courses/c/Index.css
@@ -18,6 +18,12 @@
     background-color:rgb(223, 220, 250);
     border-radius: 10px;  
 }
+.playlist::-webkit-scrollbar-track{
+  background-color: transparent;
+}
+.playlist::-webkit-scrollbar-thumb{
+  background-color: transparent;
+}
   
   .playlist ul {
     list-style-type: none;
@@ -38,11 +44,11 @@
   .playlist li:hover {
     background-color: #3bb9d234;
   }
-    /* img {
+     /* img {
     width: 120px;
     height: 90px;
-    margin-right: 10px; /* Adjust the spacing between thumbnail and text 
-    } */
+    margin-right: 10px; /* Adjust the spacing between thumbnail and text
+    }   */
   
   iframe {
     width: 100%;
@@ -51,7 +57,7 @@
     /* padding-bottom: 56.25%; 16:9 aspect ratio (9 / 16 * 100%) */
   }
   .title{
-    font-weight: bold;
+    font-weight: bold; 
     color: #0651a6;
   }
   .playlist-item{
