--- a/src/components/About/Team.css
+++ b/src/components/About/Team.css
@@ -18,6 +18,17 @@
     cursor: pointer;
     margin-left: 5%;
 }
+.group1{
+    display: flex;
+    flex-direction:column;
+    margin-left: 15%;
+}
+@media screen (max-width: 768px) {
+    .group1{
+      display:flex
+    }
+
+  } 
 .Dot {
     height: 10px;
     width: 10px;
@@ -74,14 +85,27 @@
     margin-left: 40px;
     margin-top: 10px;
     margin-bottom: 30px;
-    background: linear-gradient(45deg, #ff8a00, #e52e71);
+    /* background: linear-gradient(45deg, #ff8a00, #e52e71); */
+    background-color:#2d0372;
     color: white;
     border:none;
     padding: 5px 10px;
     border-radius: 10px;
     font-size: 16px;
     cursor: pointer;
+    transition: background-color 600ms, border-color 600ms;
+    z-index: 10000;
 }
+
+      .ButtonStyle:hover {  
+        left: 0;
+        color: #2d0372 ;
+        font-weight: bold;
+        background-color: transparent;
+        border-width: 2px;
+        border-color: #2d0372;
+        border-style: solid;
+      }
 
 #model3 .description h1
 {
