--- a/src/components/Courses/c/Index.css
+++ b/src/components/Courses/c/Index.css
@@ -1,13 +1,47 @@
 .app {
     display: flex;
+    flex-direction:row;
     justify-content: space-between;
-    align-items: flex-start;
+    align-items:center;
     padding: 20px;
   }
-  
+  @media screen and (max-width: 768px) {
+    .app {
+      flex-direction:column;
+    }
+    .video-container {
+      width: 90%;
+      align-self: center;
+      flex: 0 0 70%; /* Adjust the width as needed */
+      padding: 0 20px;
+    }
+    .playlist{
+      align-self: center;
+    }
+  }
+   @media screen and (min-width: 989px)and (max-width: 1100px) {
+    .playlist-text{
+      margin-left: 5px;
+      font-size:small;
+    }
+
+  } 
+  @media screen and (min-width:768px)and (max-width: 989px) {
+    .playlist-text{
+      margin-left: 5px;
+      font-size:smaller;
+    }
+    img{
+      max-width: 100%;
+      height:auto;
+    }
+
+  }
+
   .video-container {
     flex: 0 0 70%; /* Adjust the width as needed */
     padding: 0 20px;
+    border-radius: 10px;
   }
   
   .playlist {
@@ -34,7 +68,6 @@
     cursor: pointer;
     margin: 5px 0;
     padding: 5px;
-    background-color:;
     border-radius: 5px;
     display: flex;
     flex-direction: row; /* Display playlist items as flex containers */
@@ -53,6 +86,7 @@
   iframe {
     width: 100%;
     height:25rem;
+    border-radius: 10px;
     /* position: relative; */
     /* padding-bottom: 56.25%; 16:9 aspect ratio (9 / 16 * 100%) */
   }
@@ -62,6 +96,8 @@
   }
   .playlist-item{
     display:flex;
+    width: 100%;
+    align-self: center;
   }
   .playlist-text{
     margin-left: 10px;
