--- a/src/components/Blog/blog.css
+++ b/src/components/Blog/blog.css
@@ -43,9 +43,8 @@
 }
 
 .btitle{
-    font-size: 1.6rem;
-    font-weight: bold;
-    margin: 5px;
+        font-weight: bold;
+    color: #0651a6;
 }
 
 .bdescription {
