--- a/src/components/HeroSection/BodyStyle.css
+++ b/src/components/HeroSection/BodyStyle.css
@@ -225,14 +225,14 @@
 
 
 /* 本体には関係ないスタイル */
-.container{
+/* .container{
     width : 100% ;
     margin-top: 20px;
     display : flex ;
     flex-direction : column ;
     justify-content : center ;
     align-items : center ;
-}
+} */
 
 /* video container */
 
